# yaz

./: .env  .env.example  .gitignore  .gitmodules  .license-header.txt  Dockerfile  Makefile  README-NEW.md  README.md  __init__.py  alembic.ini  app.py  asgi.py  directory_structure.txt  docker-compose.yml  main.py  output.txt  plan.txt  project-tree.txt  pyproject.toml  requirements.txt  requirements_old.txt  tasks.py
.devcontainer/: devcontainer.json
.git-hooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  deploy.yml  deployment.yml  github-loader.yml
adapters/: __init__.py
adapters/closed_source/: __init__.py  insurance.py  logistics.py
adapters/open_source/: __init__.py  hapi_fhir_adapter.py  openclinica_adapter.py  openmrs_adapter.py
api/v1/: __init__.py  analysis.py  analysis_prospective.py  analysis_retrospective.py  auth.py  cases.py  cases_new.py  collaboration.py  concepts.py  dashboard.py  data.py  decisions.py  decisions_adci.py  education.py  entities.py  evidence.py  hospitality.py  insurance.py  journal.py  knowledge.py  logistics.py  main.py  medical_consolidated.py  precision.py  proposals.py  reporter.py  reports.py  surgery.py
app/: main.py
apps/: __init__.py  registry.py
apps/clinica/: __init__.py  app.py
apps/core/: app.py  unified_platform.py
apps/educa/: __init__.py  app.py
apps/generalservices/: entrypoint.py
apps/insura/: __init__.py  app.py
apps/move/: __init__.py  app.py
apps/specificapps/: entrypoint.py
apps/surge/: app.py
apps/visioner/: entrypoint.py
backend/: Dockerfile
backend/src/: main.py
backend/tests/: test_modular_framework.py  test_platform.py
config/: .editorconfig  .env  .env.chat.example  .pre-commit-config.yaml  __init__.py  alembic.ini  local.env  logging.ini  mypy.ini  p2p-nodes.json  pytest.ini  requirements.txt  ruff.toml  tasks.yaml
core/: __init__.py  database.py  dependencies.py  licensing_manager.py
core/config/: environment.py  platform_config.py  settings.py  unified_config.py
core/managers/: adapters.py  orchestration.py
core/medical/: consolidated.py  utils.py
core/middleware/: __init__.py
core/models/: base.py  database_models.py  database_models_old.py  medical.py  shared_models.py  surgery.py  surgery_models.py  user.py
core/operators/: README.md  __init__.py  arxiv.py  base_operator.py  clinic.py  imobi.py  insure.py  mobi.py
core/orches/: common.py  main.py
core/orchestrator/: common.py  main.py
core/parent/: entrypoint.py
core/reproducibility/: manager.py
core/services/: alerting.py  base.py  case_service.py  distributed_state.py  encryption.py  ipfs_client.py  logger.py  registry.py  sync_handlers.py
core/utils/: helpers.py  license_validator.py  validation.py
data/: __init__.py  load_data.py  models.py
data/alembic/: env.py
data/database/: __init__.py  electric.py  services.py  surge.db-shm  surge.db-wal
data/migrations/: env.py
data/models/: __init__.py  orm.py  users.py
data/outputs/: sample_gastric_cohort_analysis.json  sample_gastric_cohort_analyze_result.json
data/repositories/: __init__.py  base.py
data/test_samples/: sample_cell_entities.csv  sample_gastric_cohort.json  sample_gastric_cohort.xlsx  sample_gastric_systems.csv  sample_tumor_units.csv
deploy/: DEPLOYMENT_CHECKLIST.md  README.md
deploy/config/: prod.env  production.env  staging.env
deploy/dev/: .env  Dockerfile  docker-compose.yml
deploy/prod/: .env  .env.example  Dockerfile  docker-compose.yml
deploy/test/: .env  Dockerfile  docker-compose.yml
deployment/: README.md
doc/: README.md
doc/features/: analysis.md  auth.md  decisions.md  protocols.md
docs/: API_DOCUMENTATION.md  API_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_PIPELINE_GUIDE.md  DEPLOYMENT_GUIDE.md  DOMAIN_CONFIGURATION.md  DocumentationIndex.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  OPERATIONS.md  PLATFORM_READY.md  PWA.md  QUICK_START.md  README.md  SECURITY.md  STATUS.md  SUMMARY.md  TESTING.md  TEXT_IMAGE_IMPLEMENTATION.md  USER_GUIDE.md  ai-enhancement-plan.md  refactor_plan.md  vm_setup_instructions.md
docs/api/: README.md
docs/architecture/: README.md
docs/assets/: README.md
docs/audit/: audit_report.md
docs/components/: README.md  case-list.md  domain-selector.md
docs/development/: CONTRIBUTING.md
docs/guides/: developer-onboarding.md
docs/legal/: ATTRIBUTIONS.md  LICENSE_COMPLIANCE.md
docs/runbooks/: production-deployment.md
docs/status/: IMPLEMENTATION_STATUS.md
feature/: __init__.py
frontend/: Dockerfile  app.py  app_new.py  tree_output.txt
infra/: __init__.py  deployment.py
n8n/: .env.example  README.md
network/: __init__.py  encryption.py  mesh_routing.py  offline_sync.py
orchestrator/: main.py
script/: create_images.sh
scripts/: analyze_imports.py  bundle-analysis.sh  check_domains.py  clean_cache.sh  cleanup_legacy.py  comprehensive_refactor.py  create_sample_db.py  deploy-prod.sh  deploy_surge.py  generate_api_docs.py  generate_logo.py  launch-dry.sh  license_validator.py  load_sample_data.py  pwa-audit.sh  run.sh  run_prod.sh  run_prod_enhanced.sh  setup-contabo-infrastructure.sh  setup-dev.sh  setup-git-hooks.sh  setup_local.sh  setup_multicloud.sh  setup_p2p.sh  start_platform.sh  test_bitchat_integration.sh  update_status.py  validate_data_pipeline.py  validate_dry.py  validate_naming.py  validate_platform.py  validate_production_readiness.py
shared/: __init__.py  base_app.py  config.py  database.py  logging.py  models.py
src/: app.py
src/move/: router.py  (+1 more)
tests/: README.md  conftest.py  run_comprehensive_tests.py  test_canary.py  test_clinical_workflow.py  test_core.py  test_fhir_integration.py  test_forms_integration.py  test_gastrectomy_engine.py  test_gastric_domain.py  test_imaging_integration.py  test_medical_modules.py  test_platform.py  test_smart_integration.py  test_surge.py
tools/: ai_cost_demo.py  domains_app.py  fix_imports.py  production-checklist.py  setup_ai.py  surgify_demo.py  tasks.py  test_enhanced_ai.py  validate_surgify.py
web/: __init__.py  router.py
(+1150 files in other folders)
